style:resized issue with gif not showing

--- a/solutionstyle.css
+++ b/solutionstyle.css
@@ -67,7 +67,7 @@ a:hover{
 }
 
 .img{
-   height: 400px;
+   height: 600px;
    background-image: url(https://64.media.tumblr.com/3e4417b1e9ab0f6452c5ccc977212f39/af3550069fb66b8b-07/s540x810/9a9ade0b2cd9ab8157f69ca422bfc136bd994268.gifv);
    background-size: cover;
    display: flex;
